# REST_csv_Reader

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/config/: settings.py  urls.py
src/core/: admin.py  models.py  serializers.py  urls.py  views.py
src/core/migrations/: 0001_initial.py  0002_alter_customer_spent_money.py  0003_alter_stoneitem_quantity.py
